# PlayingWithRust

word2vec/: Cargo.toml
word2vec/src/: main.rs
