[package]
name = "word2vec"
version = "0.1.0"
authors = ["joakim-rishaug <joakim.rishaug@finn.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.7.1"
ndarray = "0.13.0"
ndarray-rand = "0.11.0"
circular-queue = "0.2.3"
